# conduit-sdk-rs

./: .gitignore  Cargo.toml  README.mdx  build.rs  lefthook.yml
examples/: monitor_modules.rs  monitor_state.rs  watch_modules.rs
src/: error.rs  lib.rs  prelude.rs
src/addr/: mod.rs  url_remap.rs
src/clients/: mod.rs
src/clients/authentication/: mod.rs
src/clients/authorization/: mod.rs
src/clients/chat/: create_room.rs  delete_room.rs  mod.rs  send_message.rs
src/clients/conduit/: mod.rs
src/clients/conduit_module/: mod.rs
src/clients/database/: mod.rs
src/clients/email/: mod.rs  nodemailer.rs  register_template.rs  send_email.rs
src/clients/health/: check.rs  mod.rs  watch.rs
src/clients/push_notifications/: get_notification_tokens.rs  mod.rs  send_many_notifications.rs  send_notification.rs  send_notification_to_many_devices.rs  set_notification_token.rs
src/clients/router/: mod.rs
src/clients/sms/: mod.rs  send_sms.rs  send_verification_code.rs  verify.rs
src/clients/storage/: mod.rs
src/modules/: mod.rs
src/modules/authentication/: mod.rs  path.rs  team.rs
src/modules/authorization/: mod.rs
src/modules/chat/: mod.rs  room.rs
src/modules/conduit/: mod.rs
src/modules/database/: mod.rs
src/modules/email/: mod.rs
src/modules/forms/: mod.rs
src/modules/push_notifications/: mod.rs  token.rs
src/modules/router/: mod.rs  security_client.rs
src/modules/sms/: mod.rs
src/modules/storage/: mod.rs
src/modules/unknown/: mod.rs
src/registry/: error.rs  inner.rs  mod.rs
src/sd/: mod.rs  module_name.rs
(+20 files in other folders)
