[package]
name = "conduit-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
async-trait = "0.1.81"
chrono = "0.4.38"
thiserror = "1.0.63"
serde_json = "1.0.127"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
futures = "0.3.30"

[build-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.12"
reqwest = "0.12.7"

[dev-dependencies]
dotenvy = "0.15.7"
